Spark/spark-history-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-history-server
  namespace: lakehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-history-server
  template:
    metadata:
      labels:
        app: spark-history-server
    spec:
      containers:
        - name: spark-history-server
          image: ngquanghuyit/spark-delta-lake:3.3  
          command: ["/opt/bitnami/spark/sbin/start-history-server.sh"]
          args: []
          ports:
            - containerPort: 18080
          volumeMounts:
            - name: spark-config
              mountPath: /opt/bitnami/spark/conf/spark-defaults.conf
              subPath: spark-defaults.conf
      volumes:
        - name: spark-config
          configMap:
            name: spark-history-config

---
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server
  namespace: lakehouse
spec:
  type: ClusterIP
  ports:
    - port: 18080
      targetPort: 18080
  selector:
    app: spark-history-server
