Spark/sts-ingress.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: spark-history-ingress
    namespace: lakehouse
    annotations:
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
  spec:
    ingressClassName: nginx
    rules:
      - host: spark-history.lakehouse.local
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: spark-history-server
                  port:
                    number: 18080
